--- a/AimpLyricsPlugin/AimpLyricsPlugin.csproj
+++ b/AimpLyricsPlugin/AimpLyricsPlugin.csproj
@@ -64,6 +64,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AimpLyricsPlugin.cs" />
+    <Compile Include="EditWindow.xaml.cs">
+      <DependentUpon>EditWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LyricInfo.cs" />
     <Compile Include="LyricWindow.xaml.cs">
       <DependentUpon>LyricWindow.xaml</DependentUpon>
@@ -99,6 +102,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="EditWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LyricWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
